--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
     "@kadena/spirekey-sdk": "^1.0.0",
     "@kadena/types": "^0.7.0",
     "@plasmohq/storage": "^1.12.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.460.0",
     "plasmo": "0.89.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -24,7 +31,10 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "prettier": "3.2.4",
+    "tailwindcss": "^3.4.15",
     "typescript": "5.3.3"
   },
   "manifest": {
@@ -32,7 +42,8 @@
       "service_worker": "background.ts",
       "type": "module"
     },
-
-    "host_permissions": ["https://*/*"]
+    "host_permissions": [
+      "https://*/*"
+    ]
   }
 }
